--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hello World</title>
-  <link rel='stylesheet' href='/stylesheets/main.css'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <script src="/javascripts/application.js" defer></script>
 </head>
+
 <body>
 
-  <%= yield %>
+    <%= yield %>
 
 </body>
 </html>
