Add BCrypt and password_digest for user sign up

--- a/views/users/new.erb
+++ b/views/users/new.erb
@@ -15,5 +15,10 @@
   <input type="text" name="email">
   <br>
   <br>
+  <label for="">Password: </label>
+  <br>
+  <input type="password" name="password">
+  <br>
+  <br>
   <button>Sign up</button>
 </form>
