Created sessions for user log ins

--- a/views/notes/index.erb
+++ b/views/notes/index.erb
@@ -1,5 +1,6 @@
 <h1>Notes</h1>
 <a href="/users/new">Sign Up</a>
+<a href="/sessions/new">Log In</a>
 <a href="/new-note">New note</a>
 
 <section class="notes">
