--- a/views/notes/index.erb
+++ b/views/notes/index.erb
@@ -9,12 +9,12 @@
       <button>Log out</button>
     </form>
     
-    <a href="/notes/new">Add note</a>
+    <a href="/notes/new">New note</a>
   </section>
-  
+
   <section class="notes">
     <% notes.each do |note| %>
-      <% if note['note_type'] == 'note' %>
+      <% if note['note_type'] == 'note' && note['temp_note'] == 'f' %>
         <section class="note">
           <header>
             <h2><%= note['title'] %></h2>
@@ -33,8 +33,8 @@
           <p class="note-content"><%= note['note'] %></p>
 
         </section>
-      <% elsif  note['note_type'] == 'list' %>
-        <section class="note list">
+      <% elsif  note['note_type'] == 'list' && note['temp_note'] == 'f' %>
+        <section class="note">
           <header>
             <h2><%= note['title'] %></h2>
 
@@ -57,6 +57,6 @@
   </section>
 <% else %>
   <a href="/users/new">Sign Up</a>
-  <a href="/sessions/new">Log In</a>
-  <a href="/sessions/new-non-users">Start without account</a>
- <% end %>
+  <a href="/sessions/new">Log In</a>  
+  <a href="/new-temp-note">New note</a>
+<% end %>
