--- a/views/notes/new-temp-list.erb
+++ b/views/notes/new-temp-list.erb
@@ -1,18 +1,18 @@
-<h1>New List</h1>
+<h1>New Temporary List</h1>
 
 <section class="type-selection">
 
-<a href="/new-note" class="note-type">
+<a href="/new-temp-note" class="note-type">
 <span>Note</span>
 </a>
 
-<a href="/new-list" class="note-type selected">
+<a href="/new-temp-list" class="note-type selected">
   <span>List</span>
 </a>
 </button>
 </section>
 
-<form action="/notes-list" method="POST">
+<form action="/temp-notes-list" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
