Edit varialble names
Edit variable names to make them all uniform
App has CRUD features, non users can CRUD temp notes (it will disappear when they go back to home page), sign up and login are in place and working, notes dashboard will only display notes that were created by the user that is logged in

--- a/views/notes/new-list.erb
+++ b/views/notes/new-list.erb
@@ -2,17 +2,17 @@
 
 <section class="type-selection">
 
-<a href="/new-note" class="note-type">
+<a href="/notes/new-note" class="note-type">
 <span>Note</span>
 </a>
 
-<a href="/new-list" class="note-type selected">
+<a href="/notes/new-list" class="note-type selected">
   <span>List</span>
 </a>
 </button>
 </section>
 
-<form action="/notes-list" method="POST">
+<form action="/notes/new-list" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
