--- a/views/temp-notes/edit.erb
+++ b/views/temp-notes/edit.erb
@@ -1,6 +1,6 @@
 <h1>Edit</h1>
 
-  <form action="/notes/<%= note['id'] %>" method="POST">
+  <form action="/temp-notes/<%= note['id'] %>" method="POST">
     <input type="hidden" name="_method" value="put">
 
     <label>Date: </label>
