--- a/views/temp-notes/new-note.erb
+++ b/views/temp-notes/new-note.erb
@@ -1,14 +1,14 @@
 <h1>New Temporary Note</h1>
 
 <section class="type-selection">
-<a href="/new-temp-note" class="note-type selected">Note</a>
-<a href="/new-temp-list" class="note-type">List</a>
+<a href="/temp-notes/new-note" class="note-type selected">Note</a>
+<a href="/temp-notes/new-list" class="note-type">List</a>
 
   
 </button>
 </section>
 
-<form action="/temp-notes-new" method="POST">
+<form action="/temp-notes/new-note" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
