--- a/views/notes/index.erb
+++ b/views/notes/index.erb
@@ -1,6 +1,6 @@
 <h1>Notes</h1>
 
-<% if logged_in? %>
+<% if logged_in?%>
   <h3><%= current_user['first_name'] %>'s Notes</h3>
   
   <section class="controls">
@@ -9,12 +9,12 @@
       <button>Log out</button>
     </form>
     
-    <a href="/notes/new">New note</a>
+    <a href="/notes/new-note">New note</a>
   </section>
 
   <section class="notes">
     <% notes.each do |note| %>
-      <% if note['note_type'] == 'note' && note['temp_note'] == 'f' %>
+      <% if note['note_type'] == 'note' && note['temp_note'] == 'f' && note['user_id'] == session['user_id'] %>
         <section class="note">
           <header>
             <h2><%= note['title'] %></h2>
@@ -33,7 +33,7 @@
           <p class="note-content"><%= note['note'] %></p>
 
         </section>
-      <% elsif  note['note_type'] == 'list' && note['temp_note'] == 'f' %>
+      <% elsif  note['note_type'] == 'list' && note['temp_note'] == 'f' && note['user_id'] == session['user_id'] %>
         <section class="note">
           <header>
             <h2><%= note['title'] %></h2>
@@ -49,7 +49,7 @@
           </header>
 
           <p><%= note['date'] %></p>
-          <p class="note-content"><%= note['note'] %></p>
+          <input type="checkbox" name="" id=""><p class="note-content"><%= note['note'] %></p>
 
         </section>
       <% end %>
@@ -58,5 +58,6 @@
 <% else %>
   <a href="/users/new">Sign Up</a>
   <a href="/sessions/new">Log In</a>  
-  <a href="/new-temp-note">New note</a>
+  <a href="/temp-notes/new-note">New note</a>
 <% end %>
+
