--- a/views/temp-notes/new-list.erb
+++ b/views/temp-notes/new-list.erb
@@ -2,17 +2,17 @@
 
 <section class="type-selection">
 
-<a href="/new-temp-note" class="note-type">
+<a href="/temp-notes/new-note" class="note-type">
 <span>Note</span>
 </a>
 
-<a href="/new-temp-list" class="note-type selected">
+<a href="/temp-notes/new-list" class="note-type selected">
   <span>List</span>
 </a>
 </button>
 </section>
 
-<form action="/temp-notes-list" method="POST">
+<form action="/temp-notes/new-list" method="POST">
   <br>    
   <label>Date: </label>
   <input type="date" name="date">
