--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
 
   <link rel="stylesheet" href="/stylesheets/main.css">
-  <script src="/javascripts/application.js" defer></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  
+  <script src="/js/application.js" type="text/javascript" defer></script>
+  
+  <title>Document</title>
 </head>
 
 <body>
 
-    <%= yield %>
+  <%= yield %>
 
 </body>
 </html>
