--- a/views/notes/new-note.erb
+++ b/views/notes/new-note.erb
@@ -23,5 +23,9 @@
   <textarea type="text" name="note" rows="20" cols="70"></textarea>
   <br>
   <br>
+  <label>Favourite? </label>
+  <input type="checkbox" name="favourite" value="t" uncheckedValue="f"/>
+  <br>
+  <br>
   <button>Add note</button>
 </form>
