--- a/views/notes/new-list.erb
+++ b/views/notes/new-list.erb
@@ -28,7 +28,10 @@
   </textarea>
   <br>
   <br>
+  <label>Favourite? </label>
+
+<input type="checkbox" name="favourite" value="t" uncheckedValue="f"/>
+  <br>
+  <br>
   <button>Add note</button>
 </form>
-
- <button class="list-preview">Preview List</button>
