--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
   
   <script src="/js/application.js" type="text/javascript" defer></script>
   
-  <title>Document</title>
+  <title>Notes</title>
 </head>
 
 <body>
