Fixed temp notes bug
Created a new method for creating temp notes

--- a/views/temp-notes/temp-index.erb
+++ b/views/temp-notes/temp-index.erb
@@ -1,5 +1,5 @@
 <h1>Temporary Notes</h1>
-
+<p>Sign up to unlock full features!</p>
 <section class="controls">
   <form action="/temp-notes" method="POST">
     <input type="hidden" name="_method" value="delete">
