--- a/views/notes/index.erb
+++ b/views/notes/index.erb
@@ -10,82 +10,100 @@
     </form>
     
     <a href="/notes/new-note">New note</a>
+
+    <div class="dropdown">
+      <button class="sort-btn">Sort by</button>
+
+      <div class="dropdown-content"> 
+        <form action="/temp-notes" method="POST">
+          <input type="hidden" name="_method" value="put">
+          <button>Date created</button>
+        </form>
+
+        <form action="/temp-notes" method="POST">
+          <input type="hidden" name="_method" value="put">
+          <button>Latest created</button>
+        </form>
+
+        <form action="/temp-notes" method="POST">
+          <input type="hidden" name="_method" value="put">
+          <button>Title</button>
+        </form>
+      </div>
+    </div>
   </section>
 
   <section class="notes">
     <% notes.each do |note| %>
-      <% if note['note_type'] == 'note' && note['temp_note'] == 'f' && note['user_id'] == session['user_id'] %>
+      <% if note['note_type'] == 'note' && note['temp_note'] == 'f' && note['user_id'] == session['user_id'] && note['user_id'] != 0 %>
 
-        <section class="note">
-          <header>
+    <section class="note">
+      <header>
+        <% if note['favourite'] == 't' %>
+          <img class="fav-heart" src="/images/favicon-32x32.png" alt="">
+        <% end %>
+      </header>
+
+      <section class="controls">
+        <a href="/notes/<%= note['id'] %>/edit">Edit</a>
+        
+        <form action="/notes/<%= note['id'] %>" method="POST">
+          <input type="hidden" name="_method" value="delete">
+          <button class="delete-btn">Delete</button>
+        </form>
+
+        <% if note['favourite'] == 't' %>
+          <form action="/notes/<%= note['id'] %>/nofav" method="POST">
+            <input type="hidden" name="_method" value="put">
+            <button class="fav-btn">NO FAV</button>
+          </form>
+        <% else %>
+          <form action="/notes/<%= note['id'] %>/fav" method="POST">
+            <input type="hidden" name="_method" value="put">
+            <button class="fav-btn">FAV</button>
+          </form>
+        <% end %>
+      </section>
+
+      <p><%= note['date'] %></p>
+      <p class="note-content"><%= note['note'] %></p>
+
+    </section>
+
+    <% elsif  note['note_type'] == 'list' && note['temp_note'] == 'f' && note['user_id'] == session['user_id'] %>
+      <section class="note">
+        <header>
           <h2><%= note['title'] %></h2>
 
           <% if note['favourite'] == 't' %>
             <img class="fav-heart" src="/images/favicon-32x32.png" alt="">
           <% end %>
-          </header>
+        </header>
 
-          <section class="controls">
-              <a href="/notes/<%= note['id'] %>/edit">Edit</a>
-              
-              <form action="/notes/<%= note['id'] %>" method="POST">
-                <input type="hidden" name="_method" value="delete">
-                <button class="delete-btn">Delete</button>
-              </form>
+        <section class="controls">
+          <a href="/notes/<%= note['id'] %>/edit">Edit</a>
+          
+          <form action="/notes/<%= note['id'] %>" method="POST">
+            <input type="hidden" name="_method" value="delete">
+            <button>Delete</button>
+          </form>
 
-              <% if note['favourite'] == 't' %>
-                <form action="/notes/<%= note['id'] %>/nofav" method="POST">
-                  <input type="hidden" name="_method" value="put">
-                  <button class="fav-btn">NO FAV</button>
-                </form>
-              <% else %>
-                <form action="/notes/<%= note['id'] %>/fav" method="POST">
-                  <input type="hidden" name="_method" value="put">
-                  <button class="fav-btn">FAV</button>
-                </form>
-              <% end %>
-            </section>
-
-          <p><%= note['date'] %></p>
-          <p class="note-content"><%= note['note'] %></p>
-
-        </section>
-      <% elsif  note['note_type'] == 'list' && note['temp_note'] == 'f' && note['user_id'] == session['user_id'] %>
-
-        <section class="note">
-          <header>
-            <h2><%= note['title'] %></h2>
-
-            <% if note['favourite'] == 't' %>
-              <img class="fav-heart" src="/images/favicon-32x32.png" alt="">
-            <% end %>
-          </header>
-
-          <section class="controls">
-            <a href="/notes/<%= note['id'] %>/edit">Edit</a>
-            
-            <form action="/notes/<%= note['id'] %>" method="POST">
-              <input type="hidden" name="_method" value="delete">
-              <button>Delete</button>
+          <% if note['favourite'] == 't' %>
+            <form action="/notes/<%= note['id'] %>/nofav" method="POST">
+              <input type="hidden" name="_method" value="put">
+              <button class="fav-btn">NO FAV</button>
             </form>
-
-            <% if note['favourite'] == 't' %>
-              <form action="/notes/<%= note['id'] %>/nofav" method="POST">
-                <input type="hidden" name="_method" value="put">
-                <button class="fav-btn">NO FAV</button>
-              </form>
-            <% else %>
-              <form action="/notes/<%= note['id'] %>/fav" method="POST">
-                <input type="hidden" name="_method" value="put">
-                <button class="fav-btn">FAV</button>
-              </form>
-            <% end %>
-          </section>
-        
-          <p><%= note['date'] %></p>
-          <input type="checkbox" name="" id=""><p class="note-content"><%= note['note'] %></p>
-
+          <% else %>
+            <form action="/notes/<%= note['id'] %>/fav" method="POST">
+              <input type="hidden" name="_method" value="put">
+              <button class="fav-btn">FAV</button>
+            </form>
+          <% end %>
         </section>
+      
+        <p><%= note['date'] %></p>
+        <input type="checkbox" name="" id=""><p class="note-content"><%= note['note'] %></p>
+      </section>
       <% end %>
     <% end %>
   </section>
