Sort by dropdown list initial styling

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -139,13 +139,46 @@ textarea {
 
 }
 
-
 /******************* SORT BY DROPDOWN *******************/
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+
+.sort-btn {
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.sort-btn:focus {
+  background-color: rgb(255, 66, 142);
+  color: white;
+}
+
 .dropdown-content {
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  overflow:auto;
+  text-align: center;
+  width: 106px;
   z-index: 1;
+}
+
+.dropdown-content button {
+  border: none;
+  border-radius: 0;
+  color: rgb(6, 6, 78);
+  display: block;
+  padding: 12px 16px;
+  width: 100%;
+}
+
+.dropdown-content button:hover {
+  background-color: rgb(255, 236, 247);
+}
+
+.visible {
+  display: block;
 }
