--- a/views/notes/new-note.erb
+++ b/views/notes/new-note.erb
@@ -24,6 +24,7 @@
   <br>
   <br>
   <label>Favourite? </label>
+<input type="hidden" name="favourite" value="f" />
   <input type="checkbox" name="favourite" value="t" uncheckedValue="f"/>
   <br>
   <br>
