--- a/views/notes/new-list.erb
+++ b/views/notes/new-list.erb
@@ -24,13 +24,13 @@
   <br>
   <label>List: </label>
   <br>
-  <textarea type="text" name="note" rows="20" cols="70" class="list-input note-content">
-  </textarea>
+  <textarea type="text" name="note" rows="20" cols="70" class="list-input note-content"></textarea>
   <br>
   <br>
   <label>Favourite? </label>
-  <input type="checkbox" name="favourite" value="t" uncheckedValue="f"/>
+  <input type="hidden" name="favourite" value="f" />
+  <input type="checkbox" name="favourite" value="t"/>
   <br>
   <br>
-  <button>Add note</button>
+  <button class="add-item-btn">Add List</button>
 </form>
