--- a/views/notes/new-note.erb
+++ b/views/notes/new-note.erb
@@ -24,8 +24,8 @@
   <br>
   <br>
   <label>Favourite? </label>
-<input type="hidden" name="favourite" value="f" />
-  <input type="checkbox" name="favourite" value="t" uncheckedValue="f"/>
+  <input type="hidden" name="favourite" value="f" />
+  <input type="checkbox" name="favourite" value="t"/>
   <br>
   <br>
   <button>Add note</button>
