--- a/views/notes/new-list.erb
+++ b/views/notes/new-list.erb
@@ -32,5 +32,5 @@
   <input type="checkbox" name="favourite" value="t"/>
   <br>
   <br>
-  <button class="add-item-btn">Add List</button>
+  <button>Add List</button>
 </form>
