Note and calendar sync
If the note has a date, then show a dot on the calendar

--- a/views/calendar/cal-index.erb
+++ b/views/calendar/cal-index.erb
@@ -1,3 +1,5 @@
+<%= include_gon %>
+
 <div class="calendar-body">
     <div class="wrapper">
       <header>
@@ -22,3 +24,4 @@
     </div>
     
   </div>
+
