--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/calendar.css">
+  <link rel="stylesheet" href="/stylesheets/modal.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -15,6 +16,7 @@
   
   <script src="/js/application.js" type="text/javascript" defer></script>
   <script src="/js/calendar.js" type="text/javascript" defer></script>
+  <script src="/js/modal.js" type="text/javascript" defer></script>
   
   <title>Notes App</title>
 </head>
