--- a/views/notes/index.erb
+++ b/views/notes/index.erb
@@ -14,7 +14,7 @@
     <div class="dropdown">
       <button class="sort-btn">Sort by</button>
 
-      <div class="dropdown-content"> 
+      <div class="dropdown-content sort-list-visible"> 
         <form action="/sort-by-creation" method="POST">
           <input type="hidden" name="_method" value="put">
           <button class="sort-by-item">Creation</button>
