--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -127,15 +127,17 @@ textarea {
 .dropdown-content {
   background-color: #f1f1f1;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  display: none;
   position: absolute;
   overflow: auto;
   text-align: center;
   width: 106px;
   z-index: 1;
-
   top: 28px;
   left: -24px;
+}
+
+.sort-list-visible {
+  display: none;
 }
 
 .dropdown-content button {
