--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -62,14 +62,20 @@ button:hover {
   margin-top: 1.5rem;
 }
 
+.note {
+  height: 300px;
+  width: 300px;
+  box-shadow: 2px 2px 5px #b0b0b0;
+}
+
 .note header {
   background-color: rgba(255, 240, 251, 0.499);
   align-items: center;
   display: flex;
-  height: 67.813px;
+  height: 68px;
   justify-content: space-between;
   padding: 0 1rem;
-  width: 269.328px;
+  width: 100%;
 }
 
 .note h2 {
@@ -83,6 +89,20 @@ button:hover {
 }
 
 /******************* NOTES DASHBOARD *******************/
+.btn-icon{
+  height: 15px;
+  width: 15px;
+}
+
+.note-controls {
+  border-top: 1px solid rgb(78, 81, 149);
+  border-bottom: 1px solid rgb(78, 81, 149);
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  padding: 4px 0;
+}
+
 .note-type {
   background-color: transparent;
   border: none;
@@ -153,7 +173,7 @@ textarea {
   background-color: rgb(255, 236, 247);
 }
 
-/******************* LIST /*******************/
+/******************* LIST *******************/
 .list-item {
   display: inline-block;
   margin: 0 auto 5px;
@@ -163,4 +183,23 @@ textarea {
   color: rgb(174, 174, 208);
   text-decoration: line-through;
   text-decoration-color: rgb(48 48 131 / 37%);
+}
+
+/******************* FOOTER *******************/
+footer {
+  position: absolute;
+  bottom: 0;
+  margin: 10px;
+}
+.links {
+  border: none;
+  border-radius: 0;
+  color: rgb(133, 127, 159);
+  
+  text-decoration: underline;
+}
+
+.links:hover {
+  background-color: rgba(255, 255, 255, 0);
+  color: rgb(85, 61, 189);
 }
