--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&family=Secular+One&display=swap" rel="stylesheet">
   
   <script src="/js/application.js" type="text/javascript" defer></script>
   <script src="/js/calendar.js" type="text/javascript" defer></script>
@@ -27,7 +30,7 @@
 
 </body>
 
-<footer>
+<section class="footer">
   <a class="links" href="/credits">Credits</a> 
-</footer>
+</section>
 </html>
